@@ -3,12 +3,10 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10),
                gnome-pkg-tools,
                gtk-doc-tools,
-               dh-autoreconf,
                dh-exec,
-               autotools-dev,
                intltool (>= 0.37.1),
                libasound2-dev [linux-any],
                libglib2.0-dev (>= 2.37.7),
